--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -17,7 +18,7 @@
 </head>
 <body>
 <div class="bandeauEdition">
-	<p>Mode Edition</p>
+	<p><i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
 
 </div>
 <header>
@@ -26,7 +27,8 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="login.html">login </a></li>
+			<li class="loginBtn"><a href="login.html">login </a></li>
+			<li class="logoutBtn"><a href="index.html">logout</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -44,8 +46,10 @@
 		</article>
 	</section>
 	<section id="portfolio">
+		<div class="headerProjets">
 		<h2>Mes Projets</h2>
-		<button class="boutonModifier">Modifier</button>
+		<button class="boutonModifier"><i class="fa-regular fa-pen-to-square"></i>  modifier</button>
+	</div>
 
 
 		<div class="categories">
